# sage

./: .gitignore  README.md  paper.docx  pyproject.toml  structure.md
sage/: cli.py
sage/APIs/: gemini.py
sage/Core/: api.py  chat.py  combiner.py  env_util.py  gemini_client.py  models.py  orchestrator.py  prompts.py  select_models.py
sage/Starters/: AI_summerize.py  common_ignors.py  entry.py  env_utils.py  file_utils.py  prompts.py  summerizer.py  terminals.py
sage/prompts/: summary_prompt.py  system_prompt.py
sage/utils/: chat.py  get_API_key.py  get_structure.py  setupt_project.py
