[project]
name = "sage"                        
version = "0.1.0"
description = "A senior developer in your terminal."
authors = [{ name = "Fikresilase W. Abebayew", email = "shitubilbila@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "inquirer>=3.0.0",
    "openai>=1.0.0",
    "prompt_toolkit>=3.0.0"
]

[project.scripts]
sage = "sage.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"
